Fixed lane book alignment in safari.

--- a/packages/opds-web-client/src/stylesheets/lane.scss
+++ b/packages/opds-web-client/src/stylesheets/lane.scss
@@ -53,6 +53,7 @@
 
     li {
       display: inline-block;
+      vertical-align: top;
     }
   }
 }
